     [sshd.c]
     call get_remote_ipaddr() early; fixes logging after client disconnects;
     report mpf@; ok dtucker@
   - markus@cvs.openbsd.org 2006/06/06 10:20:20
     [readpass.c sshconnect.c sshconnect.h sshconnect2.c uidswap.c]
     replace remaining setuid() calls with permanently_set_uid() and
     check seteuid() return values; report Marcus Meissner; ok dtucker djm

20060521
 - (dtucker) [auth.c monitor.c] Now that we don't log from both the monitor
   and slave, we can remove the special-case handling in the audit hook in
   auth_log.

20060517
 - (dtucker) [ssh-rand-helper.c] Check return code of mkdir and fix file
   pointer leak.  From kjhall at us.ibm.com, found by coverity.

20060515
 - (dtucker) [openbsd-compat/getrrsetbyname.c] Use _compat_res instead of
   _res, prevents problems on some platforms that have _res as a global but
   don't have getrrsetbyname(), eg IRIX 5.3.  Found and tested by
   georg.schwarz at freenet.de, ok djm@.
 - (dtucker) [defines.h] Find a value for IOV_MAX or use a conservative
   default.  Patch originally from tim@, ok djm
 - (dtucker) [auth-pam.c] Bug #1188: pass result of do_pam_account back and
   do not allow kbdint again after the PAM account check fails.  ok djm@

20060506
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2006/04/25 08:02:27
     [authfile.c authfile.h sshconnect2.c ssh.c sshconnect1.c]
     Prevent ssh from trying to open private keys with bad permissions more than
     once or prompting for their passphrases (which it subsequently ignores
     anyway), similar to a previous change in ssh-add.  bz #1186, ok djm@
   - djm@cvs.openbsd.org 2006/05/04 14:55:23
     [dh.c]
     tighter DH exponent checks here too; feedback and ok markus@
   - djm@cvs.openbsd.org 2006/04/01 05:37:46
     [OVERVIEW]
     $OpenBSD$ in here too
   - dtucker@cvs.openbsd.org 2006/05/06 08:35:40
     [auth-krb5.c]
     Add $OpenBSD$ in comment here too

20060504